added login to program

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
   <title>SkyCentral Updater</title>
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
   <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
+  <script type="text/javascript" src="bower_components/angular-base64/angular-base64.js"></script>
+  <script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.js"></script>
   <script type="text/javascript" src="app.js"></script>
   <script type="text/javascript" src="Services.js"></script>
   <script type="text/javascript" src="bower_components/angular-spin/spin.js"></script>
@@ -29,6 +31,7 @@
   <script type="text/javascript" src="SkillPanel/SkillBRDAdd.js"></script>
   <script type="text/javascript" src="Agents/Agent.js"></script>
   <script type="text/javascript" src="UserLogin/UserLogin.js"></script>
+  <script type="text/javascript" src="UserLogin/ChangePW.js"></script>
   <script type="text/javascript" src="SkillPanel/SkillListMod.js"></script>
   <script type="text/javascript" src="SkillPanel/SkillPostContactMapping.js"></script>
   <script type="text/javascript" src="POCs/POCs.js"></script>
