--- a/app/SkillPanel/skill.html
+++ b/app/SkillPanel/skill.html
@@ -5,7 +5,7 @@
 <!-- <input type="submit" class="btn btn-primary btn-lg" ng-click="AddSkill()" value="ADD Skill" /> -->
 <input type="submit" class="btn btn-primary btn-lg" ng-click="AddBRDSkill()" value="ADD BRD Skills" />
 <input type="submit" class="btn btn-primary btn-lg" ng-click="SkillList()" value="List Mod Skills" />
-<input type="submit" class="btn btn-primary btn-lg" ng-click="SkillPost()" value="Skill Post Mapping" />
+<!--<input type="submit" class="btn btn-primary btn-lg" ng-click="SkillPost()" value="Skill Post Mapping" />-->
 <br/><br/>
 <table class="table table-bordered">
     <tr  class="active">
