--- a/app/icLogin/login.html
+++ b/app/icLogin/login.html
@@ -29,6 +29,11 @@
                 <label for="username">Soap Password</label>
                 <input class="form-control" type="text" id="soapPassword" ng-model="user.soapPass"/>
             </fieldset>
+            <fieldset>
+                <label for="username">International</label>
+                <input class="form-control" type="checkbox" id="international" ng-model="user.international"/>
+            </fieldset>
+
             <br/>
             <input type="submit" class="btn btn-primary btn-lg" ng-click="attemptLogin2(user)" value="Login" />
         </form>
