latest updates for skyCentral

--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
   <script type="text/javascript" src="SkillPanel/SkillListMod.js"></script>
   <script type="text/javascript" src="SkillPanel/SkillPostContactMapping.js"></script>
   <script type="text/javascript" src="POCs/POCs.js"></script>
+  <script type="text/javascript" src="AgentSkill/AgentSkill.js"></script>
 
   <!-- include the Bootstrap CSS -->
   <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
